# gnarwl

./: Makefile.in  README.md  conf.h.in  configure  configure.ac  static.h
contrib/: Makefile  README
contrib/horde/: gnarwl.php
data/: Makefile  badheaders.txt  blacklist.txt  config.tmpl  footer.txt  gnarwl-3.2.spec  gnarwl-3.3.spec  gnarwl-3.4.spec  gnarwl.spec  header.txt  spec.tmpl
doc/: AUTHORS  FAQ  HISTORY  INSTALL  ISPEnv.schema  ISPEnv2.schema  Makefile  README  README.upgrade  damnit.man  example.ldif  gnarwl.man
src/: Makefile  config.c  config.h  damnit.c  dbaccess.c  dbaccess.h  gnarwl.c  mailhandler.c  mailhandler.h  util.c  util.h
